cabal-version: 3.0
name: space-game
version: 1.0
build-type: Simple

executable game
  main-is: Main.hs
  other-modules:
    Assets
    Boss
    Enemy
    GameState
    Input
    Item
    Render
    Update
    Wave
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    gloss,
    gloss-juicy,
    JuicyPixels,
    random,
    filepath